# SERRANO

./: BenchmarkExecc.sh  CMakeLists.txt  EXE.sh  GUI.py  HPC_Service.py  Interface_HPC.py  PythonExe.py  README  main.cpp
Doc/: SERRANO_1st_Review_WP4_T4.2_HLRS.pptx  SERRANO_7th_Plenary_WP4_T4.2_HLRS.pptx  SERRANO_HLRS.pptx
data/: .~lock.SPX.csv#
data/Init_Data/acceleration/: README.md
data/Init_Data/position/: README.md
data/Init_Data/sample/: .~lock.preprocessed_dataset.csv#  preprocessed_dataset.csv  sample.csv  sampleAccel.csv  sampleAccelPre.csv
data/Input_Data/: .~lock.SPX.csv#
data/Output_Data/BlackScholes/: signal_filter_0  signal_filter_1  signal_filter_2  signal_filter_3  signal_filter_4
data/Output_Data/CSVFormate/: FFT_Filter_output.csv  Kalman_Filter_output.csv
data/Output_Data/FFTFilter/: signal_filter_0  signal_filter_1  signal_filter_10  signal_filter_100  signal_filter_101  signal_filter_103  (+90 more)
module/: Benchmark.sh  EXE.sh  EXE_HPC.sh  HPC_Interface.sh  envor.sh  job_Exess.sh  modExecc.sh  modHawk.sh  modHawkScorpi.sh  modNode01Exe.sh  seranno.txt  vulcan.txt
profile/: .~lock.energy.dat#  uuvq  uuvq.cpp
profile/ElapsedTime/: KernelPerformanceApproximation.cpp  a.out  perforamnceApproximation.txt  plottingNonLinear.R
src/: AnalysisInterface.hpp  BlackScholes.hpp  DTW.hpp  DistributedErrorComputation.hpp  DistributedTimer.hpp  FFT_Filter.hpp  IDEKO_Data_Reader.hpp  KMean_Acceleration_Signal.hpp  KMean_Signal.hpp  KNN.hpp  KNN_Accelerration_Signal.hpp  KNN_Signal.hpp  KalmanFilter.hpp  Kmean.hpp  MinMaxAnalysis.hpp  Profilling.hpp  ReadCSVData.hpp  ReadCSVDataStruct.hpp  ReadWriteMPI_IO.hpp  SavitzkeyGolay.hpp  UniformPartition.hpp  WaveletFilter.hpp  cleaningDirectory.hpp  handelReadWrite.hpp  kernelFlops.hpp  mpi_type.hpp  signalContainer.hpp  signalProcessing.hpp  signal_Distributor.hpp  statistic.hpp  vector.h  wavelet.cpp  wavelet.h
tests/: CMakeLists.txt  FFT_Filter_Test.cpp  KalmanFilterTest.cpp
tests/data/: AmplituteData  SPX_KalmanFilter  SPX_KalmanFilterParallel  SPX_Open
(+1949 files in other folders)
